--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -362,6 +362,7 @@ header {
      .item-cta {
          order: 3;
          grid-area: item-cta;
+         margin-bottom: 1em;
      }
 
     &:nth-of-type(odd) {
